--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 >
                 <a class="nav-link font-weight-bold" href="#">About</a>
                 <a class="nav-link font-weight-bold" href="#">Service</a>
-                <a class="nav-link font-weight-bold" href="#">Contact</a>
+                <a class="nav-link font-weight-bold" href="#">Projects</a>
               </div>
             </div>
           </nav>
