--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="col-12 col-md-9 mx-md-auto">
           <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <a class="navbar-brand mx-0 mx-md-5" href="#">
+            <a class="navbar-brand" href="#">
               <img
                 src="./images/bootstrap.jpg"
                 alt="bootstrap logo"
